[package]
name = "esp32-ssd1306-solana"
version = "0.1.0"
authors = ["Mantistc <omarmuhieddinedarwich@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-ssd1306-solana"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.45.0"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.134"
embedded-svc = "0.28.0"
toml-cfg = "0.2.0"

[build-dependencies]
embuild = "0.33"
